# uv-python-starter-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
src/uv_python_starter_template/: __init__.py  calculator.py  config.py
tests/: test_calculator.py
